--- a/assets/less/controlblueprint.less
+++ b/assets/less/controlblueprint.less
@@ -176,6 +176,9 @@
                 > .repeater-button {
                     background: @builder-hover-color;
                     color: white!important;
+                    span {
+                        color: white!important;
+                    }
                 }
             }
         }
