--- a/widgets/defaultcontroldesigntimeprovider/partials/_control-repeater.htm
+++ b/widgets/defaultcontroldesigntimeprovider/partials/_control-repeater.htm
@@ -5,5 +5,5 @@
             $prompt = 'rainlab.builder::lang.form.property_prompt_default';
         }
     ?>
-    <div class="repeater-button"><?= e(trans($prompt)) ?></div>
+    <div class="repeater-button"><span data-localization-key="<?= e($prompt) ?>" data-plugin="<?= e($formBuilder->getPluginCode()) ?>"><?= e(trans($prompt)) ?></span></div>
 </div>
