--- a/widgets/defaultcontroldesigntimeprovider/partials/_control-switch.htm
+++ b/widgets/defaultcontroldesigntimeprovider/partials/_control-switch.htm
@@ -1,4 +1,9 @@
+<?php
+    $label = $this->getPropertyValue($properties, 'label');
+    $comment = $this->getPropertyValue($properties, 'oc.comment');
+?>
+
 <div class="builder-blueprint-control-switch">
-    <div class="builder-control-label"><?= e(trans($this->getPropertyValue($properties, 'label'))) ?></div>
-    <div class="builder-control-comment-below"><?= e(trans($this->getPropertyValue($properties, 'oc.comment'))) ?></div>
+    <div class="builder-control-label"><?php if (strlen($label)): ?><span data-localization-key="<?= e($label) ?>" data-plugin="<?= e($formBuilder->getPluginCode()) ?>"><?= e(trans($label)) ?></span><?php endif ?></div>
+    <div class="builder-control-comment-below"><?php if (strlen($comment)): ?><span data-localization-key="<?= e($comment) ?>" data-plugin="<?= e($formBuilder->getPluginCode()) ?>"><?= e(trans($comment)) ?></span><?php endif ?></div>
 </div>
