--- a/formwidgets/formbuilder/partials/_tab.htm
+++ b/formwidgets/formbuilder/partials/_tab.htm
@@ -1,7 +1,7 @@
 <li class="<?= $active ? 'active' : null ?>">
     <div class="tab-container">
         <div data-builder-tab>
-            <span data-tab-title><?= e($title) ?></span>
+            <span data-localization-key="<?= e($title) ?>" data-plugin="<?= e($this->getPluginCode()) ?>" data-tab-title><?= e(trans($title)) ?></span>
         </div>
     </div>
 
