Implementing context-aware hint system, in progress.

--- a/behaviors/indexmodeloperations/partials/_model-popup-form.htm
+++ b/behaviors/indexmodeloperations/partials/_model-popup-form.htm
@@ -1,6 +1,5 @@
-<?= Form::ajax('onModelSave', [
-    'success' => "\$el.trigger('close.oc.popup');",
-    'data-stripe-load-indicator' => 1
+<?= Form::open([
+    'data-builder-command'=>'model:cmdApplyModelSettings'
 ]) ?>
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="popup">&times;</button>
