--- a/assets/less/buildingarea.less
+++ b/assets/less/buildingarea.less
@@ -162,7 +162,8 @@
         }
 
         > li.placeholder:hover,
-        > li.placeholder.popover-highlight {
+        > li.placeholder.popover-highlight,
+        > li.placeholder.control-palette-open {
             background-color: @builder-hover-color!important;
             color: white!important;
             border-style: solid;
