--- a/formwidgets/formbuilder/partials/_body.htm
+++ b/formwidgets/formbuilder/partials/_body.htm
@@ -8,3 +8,27 @@
         <div class="flex-layout-item fix relative inspector-container builder-inspector-container" data-inspector-scrollable data-inspector-live-update></div>
     </div>
 </div>
+
+<script type="text/template" data-template="control-palette-popover">
+    <div class="popover-head">
+        <h3><?= e(trans('rainlab.builder::lang.form.click_to_add_control')) ?></h3>
+        <button type="button" class="close"
+            data-dismiss="popover"
+            aria-hidden="true">&times;</button>
+        <span class="inspector-move-to-container oc-icon-download">
+    </div>
+    <div class="popover-fixed-height" data-control-palette-controlid="%c">%s</div>
+</script>
+
+<script type="text/template" data-template="control-palette-container">
+    <div class="flex-layout-column fill-container" data-control-palette-controlid="%c" data-disposable>
+        <div class="flex-layout-item fix">
+            <div class="inspector-header">
+                <h3><?= e(trans('rainlab.builder::lang.form.click_to_add_control')) ?>
+                <span class="oc-icon-external-link-square detach"></span>
+                <span class="close">&times;</span>
+            </div>
+        </div>
+        <div class="flex-layout-item stretch relative">%s</div>
+    </div>
+</script>
