--- a/assets/less/behaviors.less
+++ b/assets/less/behaviors.less
@@ -138,3 +138,13 @@
         }
     }
 }
+
+// Fix for the Mac firefox
+
+html.gecko.mac {
+    .builder-controllers-builder-area {
+        ul.controller-behavior-list {
+            padding-right: 40px;
+        }
+    }
+}
