--- a/assets/less/behaviors.less
+++ b/assets/less/behaviors.less
@@ -34,7 +34,7 @@
             .clearfix();
             cursor: pointer;
 
-            .list-behavior {
+            .list-behavior, .reorder-behavior {
                 .border-radius(4px);
                 border: 2px solid @builder-control-border-color;
                 padding: 25px 10px 25px 10px;
