Recompile assets, minor fix

--- a/assets/css/builder.css
+++ b/assets/css/builder.css
@@ -500,29 +500,35 @@ html.gecko.mac .builder-building-area div[data-root-control-wrapper] {
 .builder-controllers-builder-area ul.controller-behavior-list .behavior-container:after {
   clear: both;
 }
-.builder-controllers-builder-area ul.controller-behavior-list .behavior-container .list-behavior {
+.builder-controllers-builder-area ul.controller-behavior-list .behavior-container .list-behavior,
+.builder-controllers-builder-area ul.controller-behavior-list .behavior-container .reorder-behavior{
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
   border: 2px solid #bdc3c7;
   padding: 25px 10px 25px 10px;
 }
-.builder-controllers-builder-area ul.controller-behavior-list .behavior-container .list-behavior table {
+.builder-controllers-builder-area ul.controller-behavior-list .behavior-container .list-behavior table,
+.builder-controllers-builder-area ul.controller-behavior-list .behavior-container .reorder-behavior table{
   border-collapse: collapse;
   width: 100%;
 }
-.builder-controllers-builder-area ul.controller-behavior-list .behavior-container .list-behavior table td {
+.builder-controllers-builder-area ul.controller-behavior-list .behavior-container .list-behavior table td,
+.builder-controllers-builder-area ul.controller-behavior-list .behavior-container .reorder-behavior table td{
   padding: 0 15px 15px 15px;
   border-right: 1px solid #bdc3c7;
 }
-.builder-controllers-builder-area ul.controller-behavior-list .behavior-container .list-behavior table td:last-child {
+.builder-controllers-builder-area ul.controller-behavior-list .behavior-container .list-behavior table td:last-child,
+.builder-controllers-builder-area ul.controller-behavior-list .behavior-container .reorder-behavior table td:last-child{
   border-right: none;
 }
-.builder-controllers-builder-area ul.controller-behavior-list .behavior-container .list-behavior table .placeholder {
+.builder-controllers-builder-area ul.controller-behavior-list .behavior-container .list-behavior table .placeholder,
+.builder-controllers-builder-area ul.controller-behavior-list .behavior-container .reorder-behavior table .placeholder{
   background: #EEF2F4;
   height: 25px;
 }
-.builder-controllers-builder-area ul.controller-behavior-list .behavior-container .list-behavior table tbody tr:last-child td {
+.builder-controllers-builder-area ul.controller-behavior-list .behavior-container .list-behavior table tbody tr:last-child td,
+.builder-controllers-builder-area ul.controller-behavior-list .behavior-container .reorder-behavior table tbody tr:last-child td{
   padding-bottom: 0;
 }
 .builder-controllers-builder-area ul.controller-behavior-list .behavior-container .form-behavior div.form {
