--- a/assets/css/builder.css
+++ b/assets/css/builder.css
@@ -1076,6 +1076,28 @@ form.hide-secondary-tabs div.control-tabs.secondary-tabs ul.nav.nav-tabs {
 .form-group.size-three-quarter {
   width: 73.5%;
 }
+form[data-entity=database] div.field-datatable {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+form[data-entity=database] div.field-datatable div[data-control=table] {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+form[data-entity=database] div.field-datatable div[data-control=table] div.table-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+form[data-entity=database] div.field-datatable div[data-control=table] div.table-container div.control-scrollbar {
+  top: 73px;
+  bottom: 0;
+  position: absolute;
+  max-height: none!important;
+  height: auto!important;
+}
 .control-tabs.auxiliary-tabs {
   background: white;
 }
