--- a/widgets/modellist/partials/_items.htm
+++ b/widgets/modellist/partials/_items.htm
@@ -63,8 +63,8 @@
                                 class="control icon btn-primary oc-icon-plus" 
                                 data-builder-command="modelList:cmdCreateList"
                                 data-model-class="<?= e($model->className) ?>"
-                                title="<?= e(trans('rainlab.builder::lang.model.add_form')) ?>"
-                            ><?= e(trans('rainlab.builder::lang.model.add_form')) ?></a>
+                                title="<?= e(trans('rainlab.builder::lang.model.add_list')) ?>"
+                            ><?= e(trans('rainlab.builder::lang.model.add_list')) ?></a>
                         </div>
 
                         <ul>
