--- a/assets/less/behaviors.less
+++ b/assets/less/behaviors.less
@@ -64,6 +64,23 @@
                 }
             }
 
+            .reorder-behavior {
+                table {
+                    i.icon-bars, .placeholder {
+                        float: left;
+                    }
+
+                    i.icon-bars {
+                        margin-right: 15px;
+                        color: #D6DDE0;
+                        font-size: 28px;
+                        line-height: 28px;
+                        position: relative;
+                        top: -2px;
+                    }
+                }
+            }
+
             .form-behavior {
                 div.form {
                     .clearfix();
