--- a/widgets/languagelist/partials/_toolbar.htm
+++ b/widgets/languagelist/partials/_toolbar.htm
@@ -2,7 +2,7 @@
     <div class="control-toolbar toolbar-padded">
         <div class="toolbar-item" data-calculate-width>
             <div class="btn-group">
-                <button type="button" class="btn btn-primary oc-icon-plus last"
+                <button type="button" class="btn btn-default oc-icon-plus last"
                     data-builder-command="localization:cmdCreateLanguage"
                     ><?= e(trans('rainlab.builder::lang.common.add')) ?></button>
             </div>
