--- a/widgets/versionlist/partials/_toolbar.htm
+++ b/widgets/versionlist/partials/_toolbar.htm
@@ -3,7 +3,7 @@
         <div class="toolbar-item" data-calculate-width>
             <div class="btn-group">
                 <div class="dropdown last">
-                    <button type="button" class="btn btn-primary oc-icon-plus"
+                    <button type="button" class="btn btn-default oc-icon-plus"
                         data-toggle="dropdown"
                         ><?= e(trans('rainlab.builder::lang.common.add')) ?></button>
 
