--- a/widgets/pluginlist/partials/_toolbar.htm
+++ b/widgets/pluginlist/partials/_toolbar.htm
@@ -1,5 +1,5 @@
-<div class="layout-row min-size panel-contents">
-    <div class="control-toolbar toolbar-padded">
+<div class="layout-row min-size panel-contents compact-toolbar">
+    <div class="control-toolbar toolbar-padded separator">
         <div class="toolbar-item" data-calculate-width>
             <div class="toolbar" id="<?= $this->getId('toolbar-buttons') ?>">
                 <?= $this->makePartial("toolbar-buttons") ?>
