--- a/formwidgets/formbuilder/partials/_controlpalette.htm
+++ b/formwidgets/formbuilder/partials/_controlpalette.htm
@@ -1,7 +1,7 @@
 <div class="control-scrollpad" data-control="scrollpad">
     <div class="scroll-wrapper">
 
-        <div class="control-filelist hero"  data-control="filelist">
+        <div class="control-filelist filelist-hero" data-control="filelist">
             <ul>
                 <?php foreach ($controlGroups as $index=>$group): ?>
                     <li class="separator">
