--- a/widgets/modellist/partials/_items.htm
+++ b/widgets/modellist/partials/_items.htm
@@ -1,6 +1,7 @@
 <?php if ($items): ?>
     <ul>
-        <?php foreach ($items as $modelInfo):
+        <?php foreach ($items as $modelInfo): ?>
+        <?php
             $model = $modelInfo['model'];
             $modelForms = $modelInfo['forms'];
             $modelLists = $modelInfo['lists'];
@@ -9,12 +10,12 @@
             $modelGroup = $model->className;
             $formsGroup = $modelGroup.'-forms';
             $listsGroup = $modelGroup.'-lists';
-            $modelGroupStatus = $this->getGroupStatus($modelGroup);
-            $formsGroupStatus = $this->getGroupStatus($formsGroup);
-            $listsGroupStatus = $this->getGroupStatus($listsGroup);
+            $modelGroupStatus = $this->getCollapseStatus($modelGroup);
+            $formsGroupStatus = $this->getCollapseStatus($formsGroup);
+            $listsGroupStatus = $this->getCollapseStatus($listsGroup);
         ?>
-            <li class="group model" 
-                data-id="<?= e($dataId) ?>" 
+            <li class="group model"
+                data-id="<?= e($dataId) ?>"
                 data-status="<?= $modelGroupStatus ? 'expanded' : 'collapsed' ?>"
                 data-group-id="<?= e($modelGroup) ?>"
             >
@@ -42,7 +43,7 @@
                                 <li class="item"
                                     data-id="<?= e($formDataId) ?>" 
                                 >
-                                    <a 
+                                    <a
                                         href="javascript:;"
                                         data-builder-command="modelForm:cmdOpenForm"
                                         data-model-class="<?= e($model->className) ?>"
@@ -85,7 +86,7 @@
                         </ul>
                     </li>
                 </ul>
-                
+
             </li>
         <?php endforeach ?>
     </ul>
