--- a/components/recordlist/default.htm
+++ b/components/recordlist/default.htm
@@ -1,45 +1,19 @@
-{% set records = __SELF__.records %}
-{% set displayColumn = __SELF__.displayColumn %}
-{% set noRecordsMessage = __SELF__.noRecordsMessage %}
-{% set detailsPage = __SELF__.detailsPage %}
-{% set detailsKeyColumn = __SELF__.detailsKeyColumn %}
-{% set detailsUrlParameter = __SELF__.detailsUrlParameter %}
+{% set ajaxPagination = __SELF__.ajaxPagination %}
 
-<ul class="record-list">
-    {% for record in records %}
-        <li>
-            {# Use spaceless tag to remove spaces inside the A tag. #}
-            {% spaceless %}
-                {% if detailsPage %}
-                    <a href="{{ detailsPage|page({ (detailsUrlParameter): attribute(record, detailsKeyColumn) }) }}">
-                {% endif %}
-
-                {{ attribute(record, displayColumn) }}
-
-                {% if detailsPage %}
-                    </a>
-                {% endif %}
-            {% endspaceless %}
-        </li>
-    {% else %}
-        <li class="no-data">{{ noRecordsMessage }}</li>
-    {% endfor %}
-</ul>
-
-{% if records.lastPage > 1 %}
-    <ul class="pagination">
-        {% if records.currentPage > 1 %}
-            <li><a href="{{ this.page.baseFileName|page({ (pageParam): (records.currentPage-1) }) }}">&larr; Prev</a></li>
-        {% endif %}
-
-        {% for page in 1..records.lastPage %}
-            <li class="{{ records.currentPage == page ? 'active' : null }}">
-                <a href="{{ this.page.baseFileName|page({ (pageParam): page }) }}">{{ page }}</a>
-            </li>
-        {% endfor %}
-
-        {% if records.lastPage > records.currentPage %}
-            <li><a href="{{ this.page.baseFileName|page({ (pageParam): (records.currentPage+1) }) }}">Next &rarr;</a></li>
-        {% endif %}
+{% if ajaxPagination is empty %}
+    {% partial '@records' %}
+{% elseif ajaxPagination == 'prepend' %}
+    <div id="{{ __SELF__ }}-pagination-wrapper">
+        {% partial '@ajax-pagination' %}
+    </div>
+    <ul id="{{ __SELF__ }}-records-wrapper" class="record-list">
+        {% partial '@ajax-records' %}
     </ul>
+{% else %}
+    <ul id="{{ __SELF__ }}-records-wrapper">
+        {% partial '@ajax-records' %}
+    </ul>
+    <div id="{{ __SELF__ }}-pagination-wrapper">
+        {% partial '@ajax-pagination' %}
+    </div>
 {% endif %}
