Update checkbox display

--- a/assets/less/builder.less
+++ b/assets/less/builder.less
@@ -4,6 +4,13 @@
 @builder-control-text-color: #95a5a6;
 @builder-hover-color: #2581b8;
 
+@builder-color_1: #fff;
+@builder-color_2: #1f99dc;
+@builder-font_family_1: FontAwesome;
+@builder-background_color_1: #95a5a6;
+@builder-background_color_2: #1f99dc;
+@builder-background_color_3: #FFF;
+
 @import "buildingarea.less";
 @import "controlblueprint.less";
 @import "behaviors.less";
