--- a/widgets/defaultcontroldesigntimeprovider/partials/_control-checkbox.htm
+++ b/widgets/defaultcontroldesigntimeprovider/partials/_control-checkbox.htm
@@ -1,9 +1,10 @@
 <?php
     $label = $this->getPropertyValue($properties, 'label');
     $comment = $this->getPropertyValue($properties, 'oc.comment');
+    $default = $this->getPropertyValue($properties, 'default') ?? '';
 ?>
 
 <div class="builder-blueprint-control-checkbox">
-    <div class="builder-control-label"><?php if (strlen($label)): ?><span data-localization-key="<?= e($label) ?>" data-plugin="<?= e($formBuilder->getPluginCode()) ?>"><?= e(trans($label)) ?></span><?php endif ?></div>
+    <div class="builder-control-label"><i class="<?= $default ? 'icon-check-square' : 'icon-square-o' ?>"></i><?php if (strlen($label)): ?><span data-localization-key="<?= e($label) ?>" data-plugin="<?= e($formBuilder->getPluginCode()) ?>"><?= e(trans($label)) ?></span><?php endif ?></div>
     <div class="builder-control-comment-below"><?php if (strlen($comment)): ?><span data-localization-key="<?= e($comment) ?>" data-plugin="<?= e($formBuilder->getPluginCode()) ?>"><?= e(trans($comment)) ?></span><?php endif ?></div>
 </div>
