--- a/assets/less/controlblueprint.less
+++ b/assets/less/controlblueprint.less
@@ -104,6 +104,78 @@
         }
     }
 
+    .builder-blueprint-control-checkbox {
+        i.icon-check-square {
+            &:before {
+                font-family: @builder-font_family_1;
+                font-weight: normal;
+                font-style: normal;
+                text-decoration: inherit;
+                -webkit-font-smoothing: antialiased;
+                content: "\f00c";
+                background-color: @builder-background_color_1;
+                font-size: 12px;
+                line-height: 17px;
+                border-width: 2px;
+                -webkit-border-radius: 3px;
+                -moz-border-radius: 3px;
+                border-radius: 3px;
+                display: inline-block;
+                text-align: center;
+                color: @builder-color_1;
+                width: 18px;
+                height: 18px;
+                margin-right: 15px;
+                position: absolute;
+                left: -3px;
+                top: 0;
+                border: 1px solid #d1d6d9;
+                -webkit-box-shadow: inset 0 1px 0 rgba(209,214,217,0.25), 0 1px 0 rgba(255,255,255,.5);
+                box-shadow: inset 0 1px 0 rgba(209,214,217,0.25), 0 1px 0 rgba(255,255,255,.5);
+            }
+        }
+    }
+
+    .builder-blueprint-control-checkbox {
+        i.icon-square-o {
+            &:before {
+                content: "";
+                display: inline-block;
+                text-align: center;
+                color: @builder-color_1;
+                width: 18px;
+                height: 18px;
+                margin-right: 15px;
+                position: absolute;
+                left: -3px;
+                top: 0;
+                background-color: @builder-background_color_3;
+                border: 1px solid #d1d6d9;
+                -webkit-box-shadow: inset 0 1px 0 rgba(209,214,217,0.25), 0 1px 0 rgba(255,255,255,.5);
+                box-shadow: inset 0 1px 0 rgba(209,214,217,0.25), 0 1px 0 rgba(255,255,255,.5);
+                -webkit-border-radius: 3px;
+                -moz-border-radius: 3px;
+                border-radius: 3px;
+            }
+        }
+        &:hover {
+            span {
+                color: @builder-color_2;
+            }
+            i.icon-square-o {
+                &:before {
+                    border: 1px solid #1f99dc;
+                }
+            }
+            i.icon-check-square {
+                &:before {
+                    border: 1px solid #1f99dc;
+                    background-color: @builder-background_color_2;
+                }
+            }
+        }
+    }
+
     li.control:hover, li.inspector-open {
          > .control-wrapper {
             .builder-blueprint-control-checkbox:before {
