initial version of sorting versions

--- a/assets/less/builder.less
+++ b/assets/less/builder.less
@@ -196,3 +196,7 @@ div.control-table .toolbar a.builder-custom-table-button {
         }
     }
 }
+
+.sidepanel-content-header a.white {
+    color: #fff;
+}
