--- a/widgets/versionlist/partials/_widget-contents.htm
+++ b/widgets/versionlist/partials/_widget-contents.htm
@@ -2,6 +2,7 @@
     <div class="sidepanel-content-header">
         <?php if ($pluginVector): ?>
             <span data-localization-key="<?= e($pluginVector->getPluginName()) ?>" data-plugin="<?= e($pluginVector->pluginCodeObj->toCode()) ?>"><?= e(trans($pluginVector->getPluginName())) ?></span>
+            <?=$this->makePartial('sort'); ?>
         <?php else: ?>
             <?= e(trans('rainlab.builder::lang.common.plugin_not_selected')) ?>
         <?php endif ?>
