--- a/behaviors/indexmodelformoperations/partials/_toolbar.htm
+++ b/behaviors/indexmodelformoperations/partials/_toolbar.htm
@@ -8,6 +8,16 @@
         <?= e(trans('backend::lang.form.save')) ?>
     </a>
 
+    <a
+        href="javascript:;"
+        class="btn btn-primary oc-icon-magic"
+        data-control="popup"
+        data-handler="onModelShowAddDatabaseColumnsPopup"
+        data-stripe-load-indicator
+    >
+        <?= e(trans('rainlab.builder::lang.list.btn_add_database_columns')) ?>
+    </a>
+
     <button
         type="button"
         class="btn btn-default empty oc-icon-trash-o <?php if (!strlen($fileName)): ?>hide<?php endif ?>"
