Changed wording to "add fields from database"

--- a/behaviors/indexmodelformoperations/partials/_toolbar.htm
+++ b/behaviors/indexmodelformoperations/partials/_toolbar.htm
@@ -12,10 +12,10 @@
         href="javascript:;"
         class="btn btn-primary oc-icon-magic"
         data-control="popup"
-        data-handler="onModelShowAddDatabaseColumnsPopup"
+        data-handler="onModelShowAddFieldsFromDatabasePopup"
         data-stripe-load-indicator
     >
-        <?= e(trans('rainlab.builder::lang.list.btn_add_database_columns')) ?>
+        <?= e(trans('rainlab.builder::lang.form.btn_add_fields_from_database')) ?>
     </a>
 
     <button
