--- a/behaviors/indexmodelformoperations/partials/_add-database-fields-popup-form.htm
+++ b/behaviors/indexmodelformoperations/partials/_add-database-fields-popup-form.htm
@@ -1,10 +1,10 @@
 <?= Form::open([
-    'data-builder-command'=>'modelForm:cmdAddFieldsFromDatabase'
+    'data-builder-command'=>'modelForm:cmdAddDatabaseFields'
 ]) ?>
 
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="popup">&times;</button>
-        <h4 class="modal-title"><?= e(trans('rainlab.builder::lang.form.btn_add_fields_from_database')) ?></h4>
+        <h4 class="modal-title"><?= e(trans('rainlab.builder::lang.form.btn_add_database_fields_datatable')) ?></h4>
     </div>
 
     <div class="modal-body">
