Fixes language key

--- a/behaviors/indexmodelformoperations/partials/_toolbar.htm
+++ b/behaviors/indexmodelformoperations/partials/_toolbar.htm
@@ -15,7 +15,7 @@
         data-handler="onModelShowAddDatabaseFieldsPopup"
         data-stripe-load-indicator
     >
-        <?= e(trans('rainlab.builder::lang.form.btn_add_database_fields_datatable')) ?>
+        <?= e(trans('rainlab.builder::lang.form.btn_add_database_fields')) ?>
     </a>
 
     <button
