--- a/behaviors/indexmodelformoperations/partials/_add-database-fields-popup-form.htm
+++ b/behaviors/indexmodelformoperations/partials/_add-database-fields-popup-form.htm
@@ -4,7 +4,7 @@
 
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="popup">&times;</button>
-        <h4 class="modal-title"><?= e(trans('rainlab.builder::lang.form.btn_add_database_fields_datatable')) ?></h4>
+        <h4 class="modal-title"><?= e(trans('rainlab.builder::lang.form.btn_add_database_fields')) ?></h4>
     </div>
 
     <div class="modal-body">
