--- a/behaviors/indexversionsoperations/partials/_version-hint-block.htm
+++ b/behaviors/indexversionsoperations/partials/_version-hint-block.htm
@@ -1,4 +1,4 @@
-<div class="modal-header">
+<div class="modal-header flex-row-reverse">
     <button type="button" class="close" data-dismiss="popup">&times;</button>
     <h4 class="modal-title"><?= e($title) ?></h4>
 </div>
