--- a/assets/less/menus.less
+++ b/assets/less/menus.less
@@ -1,6 +1,6 @@
 .builder-menu-editor {
     background: white;
-    
+
     .builder-menu-editor-workspace {
         padding: 30px;
     }
@@ -11,7 +11,7 @@
         cursor: pointer;
 
         > li {
-            .border-radius(4px);
+            border-radius: 4px;
 
             div.item-container:hover, &.inspector-open > div.item-container {
                 background: @builder-hover-color!important;
